--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://vmoiseev.github.io/ra-class-based-component/",
   "eslintConfig": {
     "extends": [
       "react-app",
